Version 0.8.10  unreleased

   * Use %n rather than \n in TestSummary.groovy.
   * Catch number format exceptions when parsing server wait configuration.

Version 0.8.9   11 Dec 2013

   * Add customized TestTask and modify CedarGaeOnGwt to allow configuration of heap for tests.
   * Explicitly set source and target compatibility to JavaVersion.VERSION_1_6, to be safe.

Version 0.8.8   28 Oct 2013

   * Work around problems with Java 1.6 and Selenium with JRuby, by forcing IPv4.

Version 0.8.7   27 Oct 2013

   * Change Cucumber so the very slow verify step is only done when running all tests.

Version 0.8.6   26 Oct 2013

   * Refactor a lot of GWT, test suite, and Cucumber stuff into cedarGwtGae and cedarCucumber.
   * Reindent all of the code with tabstop=4, which is consistent with my Eclipse formatting.
   * Make Javadoc functionality work properly on Linux, and normalize line endings to DOS CR/LF.
   * Fix typo when getting user input from console (just a missing space in the output).

Version 0.8.5   16 Sep 2013

    * Add "enabled" flag onto cedarLabel, so it's easier to turn off.

Version 0.8.4   14 Sep 2013

   * Add GWT constants parser in CedarProperties
   * Add a copyJavadocToMercurial() method 
   * Add a cedarTestSuite plugin for unittest and clienttest tasks

Version 0.8.3   13 Sep 2013

   * Add Javadoc functionality

Version 0.8.2   13 Sep 2013

    * Initial public release
