@@ -2,7 +2,7 @@
 # These are the default configuration values.  To override them, create a file local.properties.
 
 # Version of the library that will be published to Maven
-config_mavenPublishVersion=0.8.9
+config_mavenPublishVersion=0.8.10
 
 # Whether Mercurial labeling is enabled
 config_mercurialLabelEnabled=true
